Fixed Tape Wheels on Safari
Also added a click sound to the buttons.

--- a/_sass/_tapes.scss
+++ b/_sass/_tapes.scss
@@ -64,7 +64,9 @@
 }
 
 #Wheel1, #Wheel2 {
-  transform-origin:center;
+  transform-box: fill-box;
+  transform-origin: center;
+  // -webkit-transform-origin: center;
 }
 
 .rotation {
